# auto_scoring_notebook

./: .env.template  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: auto_scoring.sh  check_assert.sh  convert_ipynb_to_py.sh  createuser.sh
template/: import_all.py
