[tool.poetry]
name = "auto-scoring-notebook"
version = "0.1.0"
description = ""
authors = ["hosoi <hosoi.sota.zw@tut.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nbconvert = "^7.7.3"
pytest = "^7.4.0"
ipython = "^8.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
notebook = "^7.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
